---
source: crates/sith_python_parser/src/parser/tests.rs
expression: parsed.syntax()
---
Module(
    ModModule {
        range: 0..929,
        body: [
            Expr(
                ExprStmt {
                    range: 21..42,
                    value: BinOp(
                        BinOpExpr {
                            range: 27..40,
                            left: Name(
                                NameExpr {
                                    range: 27..28,
                                    id: Name("a"),
                                    ctx: Load,
                                },
                            ),
                            op: Mod,
                            right: Name(
                                NameExpr {
                                    range: 39..40,
                                    id: Name("b"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 66..73,
                    kind: Help2,
                    value: "a.foo",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 74..80,
                    kind: Help,
                    value: "a.foo",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 81..88,
                    kind: Help,
                    value: "a.foo",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 89..100,
                    kind: Help2,
                    value: "a.foo()",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 115..128,
                    kind: Magic,
                    value: "timeit a = b",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 129..147,
                    kind: Magic,
                    value: "timeit foo(b) % 3",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 148..176,
                    kind: Magic,
                    value: "alias showPath pwd && ls -a",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 177..205,
                    kind: Magic,
                    value: "timeit a =  foo(b); b = 2",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 206..226,
                    kind: Magic,
                    value: "matplotlib --inline",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 227..253,
                    kind: Magic,
                    value: "matplotlib     --inline",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 277..309,
                    kind: Shell,
                    value: "pwd && ls -a | sed 's/^/\\    /'",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 310..347,
                    kind: Shell,
                    value: "pwd   && ls -a | sed 's/^/\\\\    /'",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 348..393,
                    kind: ShCap,
                    value: "cd /Users/foo/Library/Application\\ Support/",
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 566..656,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 570..573,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 573..575,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Return(
                            ReturnStmt {
                                range: 581..626,
                                value: Some(
                                    Compare(
                                        CompareExpr {
                                            range: 598..620,
                                            left: Name(
                                                NameExpr {
                                                    range: 598..599,
                                                    id: Name("a"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ops: [
                                                NotEq,
                                            ],
                                            comparators: [
                                                Name(
                                                    NameExpr {
                                                        range: 619..620,
                                                        id: Name("b"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                ),
                            },
                        ),
                    ],
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 656..664,
                    kind: Paren,
                    value: "foo 1 2",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 665..673,
                    kind: Quote2,
                    value: "foo 1 2",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 674..682,
                    kind: Quote,
                    value: "foo 1 2",
                },
            ),
            For(
                ForStmt {
                    range: 711..737,
                    is_async: false,
                    target: Name(
                        NameExpr {
                            range: 715..716,
                            id: Name("a"),
                            ctx: Store,
                        },
                    ),
                    iter: Call(
                        CallExpr {
                            range: 720..728,
                            func: Name(
                                NameExpr {
                                    range: 720..725,
                                    id: Name("range"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 725..728,
                                args: [
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 726..727,
                                            value: Int(
                                                5,
                                            ),
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                    body: [
                        IpyEscapeCommand(
                            IpyEscapeCommandStmt {
                                range: 734..737,
                                kind: Shell,
                                value: "ls",
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            Assign(
                AssignStmt {
                    range: 739..748,
                    targets: [
                        Name(
                            NameExpr {
                                range: 739..741,
                                id: Name("p1"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: IpyEscapeCommand(
                        IpyEscapeCommandExpr {
                            range: 744..748,
                            kind: Shell,
                            value: "pwd",
                        },
                    ),
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 749..763,
                    target: Name(
                        NameExpr {
                            range: 749..751,
                            id: Name("p2"),
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        NameExpr {
                            range: 753..756,
                            id: Name("str"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        IpyEscapeCommand(
                            IpyEscapeCommandExpr {
                                range: 759..763,
                                kind: Shell,
                                value: "pwd",
                            },
                        ),
                    ),
                    simple: true,
                },
            ),
            Assign(
                AssignStmt {
                    range: 764..784,
                    targets: [
                        Name(
                            NameExpr {
                                range: 764..767,
                                id: Name("foo"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: IpyEscapeCommand(
                        IpyEscapeCommandExpr {
                            range: 770..784,
                            kind: Magic,
                            value: "foo     bar",
                        },
                    ),
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 786..791,
                    kind: Magic,
                    value: " foo",
                },
            ),
            Assign(
                AssignStmt {
                    range: 792..813,
                    targets: [
                        Name(
                            NameExpr {
                                range: 792..795,
                                id: Name("foo"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: IpyEscapeCommand(
                        IpyEscapeCommandExpr {
                            range: 798..813,
                            kind: Magic,
                            value: "foo  # comment",
                        },
                    ),
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 838..842,
                    kind: Help,
                    value: "foo",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 843..852,
                    kind: Help2,
                    value: "foo.bar",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 853..865,
                    kind: Help,
                    value: "foo.bar.baz",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 866..874,
                    kind: Help2,
                    value: "foo[0]",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 875..885,
                    kind: Help,
                    value: "foo[0][1]",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 886..905,
                    kind: Help2,
                    value: "foo.bar[0].baz[1]",
                },
            ),
            IpyEscapeCommand(
                IpyEscapeCommandStmt {
                    range: 906..929,
                    kind: Help2,
                    value: "foo.bar[0].baz[2].egg",
                },
            ),
        ],
    },
)
